--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ body {
 .meer-show {
     display: none;
     color: #fff;
-    font-size: 16px;
+    font-size: 14px;
     padding: 10px;
     margin-right: 10px;
 }
@@ -601,6 +601,7 @@ input {
     border: 1px solid #d8dee0;
     padding: 10px 12px;
     background-color: #fff;
+    color: #333;
 }
 
 
@@ -609,7 +610,7 @@ select {
     padding: 10px 12px;
 
     -webkit-appearance: none;
-
+    color: #333;
     background: url(../img/select-arrow.svg);
     background-position: 89% center;
     background-repeat: no-repeat;
@@ -714,6 +715,7 @@ select {
 
     .search-form__value input {
         width: 100%;
+        border-radius: 0px;
     }
     .search-form__km select, .custom__select select, .select__tot select {
         width: 100%;
