--- a/css/result.css
+++ b/css/result.css
@@ -365,6 +365,10 @@ body {
     font-size: 12px;
 }
 
+.result__filter-search {
+    display: none;
+}
+
 .result__search {
     padding-bottom: 20px;
     border-bottom: 1px solid #e6e2e2;
@@ -378,10 +382,57 @@ body {
     border: 1px solid #d8dee0;
 }
 
+.close-filters {
+    display: none;
+}
+
+
+
 
 @media screen and (max-width: 768px) {
     .result__filters {
         display: none;
+    }
+    .close-filters {
+        display: block;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+    }
+    .result__filters.active {
+        display: block;
+        position: fixed;
+        background: #fff;
+        z-index: 9;
+        min-height: 100vh;
+        width: 100%;
+        top: 0;
+        left: 0;
+        padding: 20px;
+        overflow: scroll;
+    }
+
+    .result-filters__scroll {
+        overflow: hidden;
+        overflow-y: scroll;
+        height: 100vh;
+    }
+
+
+    .result__filter-search {
+        display: block;
+        padding-top: 15px;
+    }
+
+    .filter-search__box {
+        
+        display: inline-flex;
+        align-items: center;
+    }
+
+    .filter-search__box span {
+        padding-left: 5px;
+        color: var(--linkColor);
     }
 
     .result__items {
