--- a/css/detail.css
+++ b/css/detail.css
@@ -394,6 +394,29 @@ body {
     padding-left: 5px;
 }
 
+.image-container {
+    display: flex;
+    align-items: stretch;
+    line-height: 0;
+}
+
+.image-container img {
+    max-width: 100%;
+    padding: 3px;
+    padding-bottom: 0;
+}
+
+.image-container-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.gallery-section {
+    width: 100%;
+    max-width: 1920px;
+    margin: 0 auto;
+}
+
 @media screen and (max-width:768px) {
     .detail__flex {
         flex-direction: column;
@@ -405,6 +428,10 @@ body {
 
     .object__contact {
         margin-top: 40px;
+    }
+
+    .image-container-column {
+        display: none;
     }
 
     .object-info__title {
