--- a/css/detail.css
+++ b/css/detail.css
@@ -573,10 +573,78 @@ body {
     right: -19.6px;
 }
 
+.list-right__info {
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.list-right__info a {
+    margin-left: 10px;
+    position: relative;
+}
+
+.similar-object__flex::-webkit-scrollbar {
+    display: none;
+
+}
+
+.info-popup {
+    background: var(--linkColor);
+    border-radius: 5px;
+    color: #fff;
+    padding: 10px;
+    font-size: 13px;
+    font-weight: 400;
+    position: absolute;
+    width: 300px;
+    line-height: 16px;
+    top: 27px;
+    display: none;
+    z-index: 2;
+}
+
+.info-popup.active {
+    display: block;
+}
+
+.info-popup a {
+    color: #fff;
+    display: block;
+    padding-left: 0px;
+    margin-left: 0px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    text-decoration: underline;
+}
+
+.fixed-btn a {
+    background: var(--mainColor);
+    font-size: 18px;
+    color: #fff;
+    border-radius: 10px;
+    width: 100%;
+    display: block;
+    padding: 15px;
+    text-align: center;
+}
+
+.fixed-btn {
+    display: none;
+    position: fixed;
+    background: #fff;
+    bottom: 0;
+    width: 100%;
+    padding: 10px;
+}
 
 @media screen and (max-width:768px) {
     .detail__flex {
         flex-direction: column;
+    }
+
+    .fixed-btn {
+        display: block;
     }
 
     .similar-object__flex {
@@ -673,6 +741,10 @@ body {
 
     .object-deburt__box a img {
         max-width: 100%;
+    }
+
+    .info-popup  {
+        top: 33px;
     }
 
     .breadrcrumbs-flex a {
