--- a/css/result.css
+++ b/css/result.css
@@ -447,7 +447,7 @@ body {
 
 .filter__save select {
     border: none;
-    text-align: left;
+    text-align: center;
     color: var(--linkColor);
     position: relative;
 }
@@ -460,7 +460,7 @@ body {
     position: relative;
     border-left: 1px solid #e6e2e2;
 }
-
+/*
 .filter__save-select::before {
     content: ' ';
     position: absolute;
@@ -469,17 +469,40 @@ body {
     height: 20px;
     top: 8px;
     left: 115px;
+}*/
+
+
+
+.filter__save-select select {
+    cursor: pointer;
+    width: 100%;
+}
+.filter__save select {
+    border: none;
+    text-align: center;
+    color: var(--linkColor);
+    position: relative;
 }
 
+select {
+    border: 1px solid #d8dee0;
+    padding: 10px 12px;
+    border-radius: 0px;
+    -webkit-appearance: none;
+    color: #333;
+    background: url(../img/arr-blue.svg);
+    background-position: 89% center;
+    background-repeat: no-repeat;
+    background-color: #fff;
+    background-size: 13px;
+}
 
 .filter__save-select {
     cursor: pointer;
 }
 
 .filter__save-select select {
-    background: none;
     cursor: pointer;
-    background: none;
     width: 100%;
 }
 
@@ -506,7 +529,6 @@ body {
 }
 
 
-
 @media screen and (max-width: 768px) {
     .result__filters {
         display: none;
@@ -519,6 +541,11 @@ body {
     }
     .filter__save-select::before {
         left: 15px;
+    }
+
+    select {
+        background-position: 95% center;
+        padding-right: 25px;
     }
 
     .filter-search__box svg {
@@ -542,7 +569,7 @@ body {
         position: fixed;
         background: #fff;
         z-index: 9;
-        min-height: 100vh;
+        height: 100vh;
         width: 100%;
         top: 0;
         left: 0;
@@ -553,7 +580,6 @@ body {
     .result-filters__scroll {
         overflow: hidden;
         overflow-y: scroll;
-        height: 100vh;
     }
 
 
