--- a/css/result.css
+++ b/css/result.css
@@ -447,7 +447,7 @@ body {
 
 .filter__save select {
     border: none;
-    text-align: center;
+    text-align: left;
     color: var(--linkColor);
     position: relative;
 }
@@ -479,22 +479,19 @@ body {
 }
 .filter__save select {
     border: none;
-    text-align: center;
+    text-align: left;
     color: var(--linkColor);
     position: relative;
-}
 
-select {
-    border: 1px solid #d8dee0;
-    padding: 10px 12px;
-    border-radius: 0px;
-    -webkit-appearance: none;
-    color: #333;
     background: url(../img/arr-blue.svg);
     background-position: 89% center;
     background-repeat: no-repeat;
     background-color: #fff;
     background-size: 13px;
+}
+
+.fixed {
+    overflow: hidden;
 }
 
 .filter__save-select {
@@ -522,6 +519,29 @@ select {
     padding-left: 5px;
 }
 
+.result__filters__button {
+    position: fixed;
+    background: #fff;
+    padding: 10px;
+    display: none;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+}
+
+.result__filters__button a {
+    background: var(--linkColor);
+    color: #fff;
+    width: 100%;
+    padding: 10px;
+    font-size: 18px;
+    font-weight: 500;
+    width: 100%;
+    display: block;
+    text-align: center;
+}
+
+
 @media screen and (max-width: 1000px) {
     .filter__save-select::before {
         left: 15px;
@@ -532,6 +552,13 @@ select {
 @media screen and (max-width: 768px) {
     .result__filters {
         display: none;
+    }
+    .result__filters__button {
+        display: block;
+    }
+
+    .result-filters__scroll {
+        padding-bottom: 35px;
     }
     .filter__save {
         width: 50%;
