--- a/css/detail.css
+++ b/css/detail.css
@@ -20,8 +20,9 @@ a {
 body {
     background: #fff;
     font-family: 'Inter', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 21px;
 }
 
 
@@ -330,6 +331,7 @@ body {
     background: #f2f2f2;
     padding: 15px;
     position: relative;
+    border-radius: 9px 9px 0px 0px;
 }
 
 .object-contact__box-header a img {
@@ -411,6 +413,17 @@ body {
     flex-direction: column;
 }
 
+.image-container .image-container-column:not(:first-child) img {
+    max-width: 100%;
+    max-height: 319px;
+    width: 100%;
+    object-fit: cover;
+}
+
+.image-container .image-container-column:not(:first-child) {
+    text-align: center;
+}
+ 
 .gallery-section {
     width: 100%;
     max-width: 1920px;
@@ -773,9 +786,33 @@ body {
     margin-right: 10px;
 }
 
+.image-container .image-container-column {
+    display: none;
+}
+
+.image-container .image-container-column:nth-child(1) {
+    width: 50%;
+}
+
+.image-container .image-container-column:nth-child(1), .image-container .image-container-column:nth-child(2), .image-container .image-container-column:nth-child(3) {
+    display: flex;
+}
+
+.image-container .image-container-column:nth-child(2), .image-container .image-container-column:nth-child(3) {
+    width: 25%;
+}
+
 @media screen and (max-width:768px) {
     .detail__flex {
         flex-direction: column;
+    }
+
+    .image-container .image-container-column:nth-child(2), .image-container .image-container-column:nth-child(3) {
+        display: none;
+    }
+
+    .image-container .image-container-column:nth-child(1) {
+        width: 100%;
     }
 
     .gallery-navigation {
